[workspace]
members = [
  "lura-syntax",
  "lura-hir",
  "lura-driver",
  "lura-diagnostic",
  "lura-vfs",
  "lura-ide",
  "lura-cli",
  "lura-typer",
]

[workspace.dependencies]
dashmap = "5.1.0"
fxhash = "0.2.1"
if_chain = "1.0.2"
im = "15.1.0"
im-rc = "15.0.0"
itertools = "0.11.0"
log = "0.4.14"
thiserror = "1.0.40"

salsa-2022 = {git = "https://github.com/aripiprazole/salsa.git"}

eyre = "0.6.8"
paste = "1.0.14"

tree-sitter = "~0.20.10"
tree-sitter-lura = "0.1.13"
type-sitter-lib = {git = "https://github.com/Jakobeha/type-sitter.git"}

[workspace.package]
edition = "2021"
authors = ["Gabrielle Guimarães de Oliveira"]
description = "Resilient compiler for the Lura programming language"
documentation = "https://github.com/aripiprazole/lura"
version = "0.0.1"
