[package]
name = "lura-ariadne"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[dependencies]
lura-diagnostic = { version = "0.0.1", path = "../lura-diagnostic" }
lura-syntax = { version = "0.0.1", path = "../lura-syntax" }
lura-vfs = { version = "0.0.1", path = "../lura-vfs" }
lura-eyre = { version = "0.0.1", path = "../lura-eyre" }

salsa-2022 = { workspace = true }

tree-sitter = { workspace = true }
type-sitter-lib = { workspace = true }

dashmap = { workspace = true }
itertools.workspace = true
fxhash.workspace = true

ariadne = { version = "0.3.0", features = ["auto-color"] }
