[package]
name = "lura-cli"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[[bin]]
name = "lura"
path = "src/main.rs"

[dependencies]
lura-diagnostic = { version = "0.0.1", path = "../lura-diagnostic" }
lura-hir = { version = "0.0.1", path = "../lura-hir" }
lura-hir-lowering = { version = "0.0.1", path = "../lura-hir-lowering" }
lura-syntax = { version = "0.0.1", path = "../lura-syntax" }
lura-vfs = { version = "0.0.1", path = "../lura-vfs" }
lura-js = { version = "0.0.1", path = "../lura-js" }
lura-ariadne = { version = "0.0.1", path = "../lura-ariadne" }
lura-driver = { version = "0.0.1", path = "../lura-driver" }
lura-eyre = { version = "0.0.1", path = "../lura-eyre" }

salsa-2022.workspace = true

tree-sitter.workspace = true
type-sitter-lib.workspace = true

tree-sitter-lura = { version = "0.1.20", path = "../tree-sitter-lura" }

dashmap.workspace = true
im.workspace = true
fxhash.workspace = true
itertools.workspace = true
log.workspace = true

colored = "2"
env_logger = "0.10.0"
ropey = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.3.19", features = ["derive"] }
toml = "0.7.6"

ariadne = { version = "0.3.0", features = ["auto-color"] }
