[package]
edition = "2021"
name = "lura-driver"
version = "0.0.1"

[dependencies]
lura-diagnostic = {version = "0.0.1", path = "../lura-diagnostic"}
lura-hir = {version = "0.0.1", path = "../lura-hir"}
lura-syntax = {version = "0.0.1", path = "../lura-syntax"}
lura-vfs = {version = "0.0.1", path = "../lura-vfs"}

salsa-2022 = {git = "https://github.com/aripiprazole/salsa.git"}

tree-sitter = "~0.20.10"
tree-sitter-lura = "0.1.7"
type-sitter-lib = {git = "https://github.com/Jakobeha/type-sitter.git"}

crossbeam-channel = "0.5.8"
dashmap = "5.5.0"
eyre = "0.6.8"
notify-debouncer-mini = "0.3.0"
