[package]
name = "lura-driver"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[dependencies]
lura-diagnostic = {version = "0.0.1", path = "../lura-diagnostic"}
lura-hir = {version = "0.0.1", path = "../lura-hir"}
lura-syntax = {version = "0.0.1", path = "../lura-syntax"}
lura-vfs = {version = "0.0.1", path = "../lura-vfs"}
lura-typer = {version = "0.0.1", path = "../lura-typer"}

salsa-2022 = {workspace = true}

tree-sitter = {workspace = true}
tree-sitter-lura = {workspace = true}
type-sitter-lib = {workspace = true}

dashmap = {workspace = true}
eyre = {workspace = true}
itertools.workspace = true

ariadne = { version = "0.3.0", features = ["auto-color"] }
