[package]
name = "lura-hir-lowering"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
version.workspace = true

[dependencies]
lura-diagnostic = {version = "0.0.1", path = "../lura-diagnostic"}
lura-hir = {version = "0.0.1", path = "../lura-hir"}
lura-syntax = {version = "0.0.1", path = "../lura-syntax"}
lura-vfs = {version = "0.0.1", path = "../lura-vfs"}

salsa-2022 = {workspace = true}

eyre.workspace = true
im.workspace = true
fxhash.workspace = true
dashmap.workspace = true

tree-sitter.workspace = true
type-sitter-lib.workspace = true
