[package]
edition = "2021"
name = "lura-syntax"
version = "0.0.1"

[dependencies]
lura-diagnostic = {version = "0.0.1", path = "../lura-diagnostic"}
lura-vfs = {version = "0.0.1", path = "../lura-vfs"}

salsa-2022 = {git = "https://github.com/aripiprazole/salsa.git"}

tree-sitter = "~0.20.10"
tree-sitter-lura = "0.1.5"
type-sitter-lib = {git = "https://github.com/Jakobeha/type-sitter.git"}
