[package]
name = "tree-sitter-lura"
description = "lura grammar for the tree-sitter parsing library"
version = "0.1.20"
keywords = ["incremental", "parsing", "lura"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/aripiprazole/lura"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
